fixed burger not displaying on mobile viewports

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,7 +1,7 @@
 .Burger { 
     width: 100%;
     margin: auto;
-    max-height: 250px;
+    height: 250px;
     overflow: scroll;
     text-align: center;
     font-weight: bold;
